--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           deno-version: ${{ matrix.deno }}
       - run: deno install --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts
-      - run: Trex update
-      - run: Trex --version
-      - run: Trex install --map fs http@0.54.0 oak ws
-      - run: Trex --deps
-      - run: Trex getTool dpx
+      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts update
+      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts --version
+      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts install --map fs http@0.54.0 oak ws
+      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts --deps
+      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts getTool dpx
