--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
         uses: denolib/setup-deno@master
         with:
           deno-version: ${{ matrix.deno }}
-      - run: deno install --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts
-      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts update
-      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts --version
-      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts install --map fs http@0.61.0 oak ws
-      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts --deps
-      - run: deno run --allow-read --allow-write --allow-net --allow-run --unstable https://deno.land/x/trex/Trex.ts getTool dpx
+      - run: deno install -f -A -n trex --unstable https://deno.land/x/trex/cli.ts
+      - run: deno run -A --unstable https://deno.land/x/trex/cli.ts update
+      - run: deno run -A --unstable https://deno.land/x/trex/cli.ts --version
+      - run: deno run -A --unstable https://deno.land/x/trex/cli.ts install --map fs http@0.61.0 oak ws
+      - run: deno run -A --unstable https://deno.land/x/trex/cli.ts --deps
+      - run: deno run -A --unstable https://deno.land/x/trex/cli.ts getTool dpx
