--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "deno.enable": true,
   "deno.import_map": "./import_map.json",
-  "deno.unstable": true
+  "deno.unstable": true,
+  "deno.import_intellisense_origins": {
+    "https://deno.land": true
+  }
 }
