--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-16.04
     strategy:
       matrix:
-        deno: [1.6.3]
-    name: Deno Trex cli test
+        deno: [1.7.1]
+    name: Trex cli test
     steps:
       - uses: actions/checkout@master
       - name: Setup Deno
