--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,8 @@ jobs:
         deno: [1.10.1]
     name: Trex cli test
     steps:
-      - uses: actions/checkout@master
       - name: Setup Deno
-        uses: denolib/setup-deno@master
+        uses: denoland/setup-deno@main
         with:
           deno-version: ${{ matrix.deno }}
       - run: cd ./test && deno test -A --unstable --import-map=../import_map.json
