--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        deno: [1.10.1]
+        os: [ubuntu-latest, windows-latest]
+        deno: [1.11.0]
     name: Trex cli test
     steps:
       - uses: actions/checkout@master
